# exp_PRNG

./: CMakeLists.txt  Makefile  PRNG_uniform.c  README.md  exp_dist_generator.c  exprng.h  histogram.gnuplot  histogram_generator.c  main.c  mean_vs_batch.gnuplot  sample_mean_calc.c  sample_variance_calc.c  sort_compare.c  variance_vs_batch.gnuplot
